@@ -2293,6 +2293,10 @@ Mon, 14 Jan 2008 10:42:23 +0100
 
 	- Set valid return values even in case of an error to prevent
 	  segfaults.
+
+Tue, 15 Jan 2008 11:26:14 +0100
+
+	- Re-enabled variables in fetch/move command.
 	- Set pgtypes library version to 3.0.
 	- Set compat library version to 3.0.
 	- Set ecpg library version to 6.0.
